# vimms

./: .coveragerc  .gitignore  .readthedocs.yml  .zenodo.json  CNAME  CONTRIBUTING.md  LICENSE  Pipfile  README.md  _config.yml  environment.yml  environment_readthedocs.yml  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.bat  run_tests.sh  setup.py
R/: getROIs.R
batch_files/: FeatureFinderCentroided.ini  QCB_mzmine_batch_ms1.xml  QCB_mzmine_batch_ms2.xml  QCB_mzmine_batch_ms2_simon.xml  QC_PP.xml  TextExporter.ini  multi_sample_peak_pick.xml  multi_sample_peak_pick_centwave.xml  multi_sample_peak_pick_centwave2.xml  multi_sample_peak_pick_old.xml  mzmine_batch_ms1.xml  mzmine_batch_ms2.xml  real_smartroi_eval.xml  roi2dataset_mzmine_batch.xml
demo/: guide_to_vimms.ipynb
docs/: README.md  chemicals.md  controllers.md  requirements.txt
examples/: 01. Download Data.ipynb  02. MS1 Simulations.ipynb  04. Top-N Simulations.ipynb  README.md
experimental/: 02. Grid Search.ipynb  03. DIA.ipynb  05. Fixed Scan.ipynb  05. Optimal Top N.ipynb  06. Purity.ipynb  Analysis_data_20200503.ipynb  ChemicalMixtureCreatorExample.ipynb  CompareWithOptimal.ipynb  ComputeOptimalResults.ipynb  ExcludedSimulations.ipynb  GradientEstimatesForPeaks.ipynb  MakeGraph.ipynb  MakeSpectralLibraries.ipynb  OptimalController.ipynb  OptimalController20200313.ipynb  RL_Env.ipynb  RL_Env_2.ipynb  RL_MaxIntensity.ipynb  RL_MaxIntensity_PPO.ipynb  RL_MaxIntensity_SinglePeaks.ipynb  TargetedStd1Test.ipynb  TopNOptimisation.ipynb  centWave_new_modified.R  example_schedule.py  simon_simulator.ipynb  training_data_extraction.R
pages/: installation.md  publications.md  research.md  talks.md  use_cases.md
(+285 files in other folders)
