[tool.poetry]
name = "vimms"
version = "2.1.4"
description = "A framework to develop, test and optimise fragmentation strategies in LC-MS metabolomics."
authors = ["Joe Wandy <joe.wandy@glasgow.ac.uk>", "Vinny Davies", "Ross McBride", "Justin J.J. van der Hooft", "Stefan Weidt", "Ronan Daly", "Simon Rogers"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/glasgowcompbio/vimms"
keywords = ["LC-MS", "metabolomics", "simulator", "mass spectrometry"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.24.3"
pandas = "^2.0.3"
scipy = "^1.11.1"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
plotly = "^5.9.0"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"
joblib = "^1.2.0"
ipyparallel = "^8.4.1"
requests = "^2.31.0"
loguru = "^0.5.3"
networkx = "^3.1"
jsonpickle = "^2.2.0"
statsmodels = "^0.14.0"
tabulate = "^0.8.10"
intervaltree = "^3.1.0"
events = "^0.5"
# gpy = "^1.10.0"
pymzml = "^2.4.7"
psims = "^1.2.7"
mass-spec-utils = "^0.0.12"
pysmiles = "^1.1.2"
numba = "^0.57.1"
numba-stats = "^1.3.0"
ms-deisotope = "^0.0.53"
optuna = "^3.3.0"
# kaleido = "^0.2.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.6.3"
ipywidgets = "^8.0.4"
flake8 = "^6.0.0"
autopep8 = "^1.6.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mkdocs = "^1.5.3"
mkdocstrings = "^0.23.0"

[tool.setuptools_scm]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
